Fix to stop galicaster control buttons from overlapping. Removes duplicate panel body html structure.

--- a/client/app.css
+++ b/client/app.css
@@ -1,4 +1,3 @@
-.margin-top-05 { margin-top: 0.5em; }
 .glyphicon-spin {
     -webkit-animation: spin 1000ms infinite linear;
     animation: spin 1000ms infinite linear;
